--- a/Mob work/src/theme/variables.scss
+++ b/Mob work/src/theme/variables.scss
@@ -23,7 +23,7 @@ $app-direction: ltr;
 // http://ionicframework.com/docs/theming/overriding-ionic-variables/
 
 
-
+$toolbar-background: #18806e;
 
 // Named Color Variables
 // --------------------------------------------------
@@ -34,15 +34,11 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
+  primary:    #18806e,
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222,
-  fiolet: #9400D3,
-  ellow: #FFFF00,
-  cyanid: #00FFFF
-
+  dark:       #222
 );
 
 
